# StreamSync

./: .dockerignore  .env.prova  .gitignore  =3.7.3  CLEAN_ARCHITECTURE_GUIDELINES.md  CONTRIBUTING_PROVIDERS.md  Dockerfile  README.md  SECURITY.md  SERVICE_NAMING_CONVENTIONS.md  behave.ini  db.md  db.sqlite3  docker-compose.ci.yml  docker-compose.prod.yml  docker-compose.yml  fan_in_out_report.json  identifier_report.json  pyproject.toml  requirements.txt
.github/scripts/: CyclomaticMetricGP.py  README_CheckSheet  depth_conditional_nesting_GP.py  fog_comments_indexGP.py  generate-integrity-report.js  len_identifiersGP.py  render-integrity-html.js  route-auth-audit.js
.github/workflows/: Update_Issue_Count_JSON.yml  cd.yml  ci.yml  conditional-nesting.yml  (+9 more)
IshikawaTools/: chart.py  histogram.py  issues.json  issues_data.json  runchart_prova.py
StreamSync/: settings.py  urls.py  views.py  wsgi.py
api/: .eslintrc.json  Dockerfile  README.md  package-lock.json
apps/: external_apis.py
catalog/: authentication.py  models.py  serializers.py  urls.py  views.py
docker/: entrypoint.sh
docs/: CLEAN_ARCHITECTURE_GUIDELINES.md
metrics/: identifier_length.yml
scripts/: issues.json  metrics.json  runchart.py  runchart_prova.py
templates/: base.html  base_manager.html  capçalera.html  cataleg.html  cerca_contingut.html  crear_llista.html  detall_carpeta.html  editar_llista.html  llistes.html  nova_compta.html  pagina_contingut.html  pagina_perfil1.html  pagina_principal.html  profile2.html  sign_in2.html
users/: admin.py  forms.py  models.py  urls.py  views.py
(+90 files in other folders)
